replace Branch by Identifiable<?>
Signed-off-by: Caio Luke <caioluke97@gmail.com>